@@ -147,8 +147,11 @@ New Features
   filtering.  Range trees can also handle values larger than 64 bits.
   (Adrien Grand, Mike McCandless)
 
-* LUCENE-6647: Add GeoHash string utility APIs (Nick Knize, Mike
+* LUCENE-6647: Add GeoHash string utility APIs (Nick Knize via Mike
   McCandless).
+
+* LUCENE-6710: GeoPointField now uses full 64 bits (up from 62) to encode
+  lat/lon (Nick Knize via Mike McCandless).
 
 API Changes
 
